# wrapi

./: README.md  mypy.ini  pyproject.toml
tests/: test_wrapi.py
wrapi/: __init__.py  api.py  auth.py  client.py
wrapi/endpoints/: access_roles.py  account.py  approvals.py  async_job.py  attachments.py  audit_log.py  colors.py  comments.py  contacts.py  custom_fields.py  data_export.py  dependencies.py  ediscovery_search.py  folder_blueprints.py  folders.py  groups.py  ids.py  invitations.py  spaces.py  tasks.py  timelog_categories.py  timelogs.py  user_schedule_exclusions.py  users.py  version.py  work_schedule_exclusions.py  work_schedules.py  workflows.py
wrapi/entities/: access_roles.py  account.py  approvals.py  async_jobs.py  attachments.py  audit_log.py  colors.py  comments.py  contacts.py  custom_fields.py  data_export.py  dependencies.py  ediscovery_search.py  folder_blueprints.py  folders.py  groups.py  ids.py  invitations.py  spaces.py  tasks.py  timelog_categories.py  timelogs.py  user_schedule_exclusions.py  users.py  version.py  work_schedule_exclusions.py  work_schedules.py  workflows.py
wrapi/types_/: _enums.py  endpoint.py  entity.py  enums.py  inputs.py  outputs.py  scalar.py
