[tool.poetry]
name = "wrapi"
version = "0.1.0"
description = ""
authors = ["Junqed <junqed+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.16"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = ">=3.7.7"
toml = ">=0.10"
isort = ">=5.0.0"
mypy = ">=0.701"
flake8-formatter-abspath = ">=1.0.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
force_grid_wrap = 3
add_imports = "from __future__ import annotations"
